[tool.poetry]
name = "tax-excursion"
version = "1.0.0"
description = "Booking system for tax office excursions"
authors = ["Your Name <your@email.com>"]

[tool.poetry.dependencies]
python = "^3.11"
Flask = "2.3.3"
gunicorn = "21.2.0"
psycopg2-binary = "2.9.9"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"